--- a/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/6.md
+++ b/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/6.md
@@ -1,31 +1,99 @@
 ﻿# Technisch Ontwerp - Reddit Bot
 ## Inleiding
-In de afgelopen 2 jaar is de [Minecraft community](https://reddit.com/r/Minecraft) enorm gegroeid. Het aantal gebruikers is in die tijd [verviervoudigd](https://subredditstats.com/r/Minecraft), en met 4 miljoen gebruikers is het nu de 66ste grootste community op Reddit. Met bijna 1600 nieuwe posts per dag is het tevens ook de 13ste meet actieve community op Reddit geworden.
+In de afgelopen 2 jaar is de [Minecraft community](https://reddit.com/r/Minecraft) enorm gegroeid. Het aantal gebruikers is in die tijd [verviervoudigd](https://subredditstats.com/r/Minecraft), en met 4.5 miljoen gebruikers is het nu de 66ste grootste community op Reddit. Met ongeveer 1500 nieuwe posts en 8500 comments per dag is het tevens ook 1 van de meest actieve communities op Reddit geworden.
 
 Het moderator team dat de regels van de community handhaaft heeft echter veel moeite om deze groei bij te benen. Het lukt ons niet om alle nieuwe posts te controleren op overtredingen, wat ervoor zorgt dat er soms posts op de hoofdpagina verschijnen die al lang verwijderd hadden moeten worden.
 
-Naast het zoeken naar extra moderators is er besloten dat wij gaan onderzoeken of het wellicht mogelijk is om een deel van ons werk te automatiseren doormiddel van een _Reddit Bot_. Een dergelijke bot zou 24/7 nieuwe posts kunnen controleren op de meest voorkomende overtredingen en deze automatisch kunnen verwijderen.
+Naast het zoeken naar extra moderators is er besloten dat wij gaan onderzoeken of het wellicht mogelijk is om een deel van ons werk te automatiseren doormiddel van een _Reddit Bot_. Een dergelijke bot zou 24/7 nieuwe posts kunnen controleren op de meest voorkomende overtredingen en deze automatisch kunnen verwijderen. Ook zouden wij hier later andere functionaliteit aan kunnen toevoegen om ons werk makkelijker te maken.
 
 ## Regels
 De handhaving van de volgende regels zal worden geautomatiseerd;
 * *No post spam* - Het is niet toegestaan voor gebruikers om in veel posts in een korte tijd te plaatsen. Dit is om spam te voorkomen.
 * *New users may not post videos* - Van elke gebruiker wordt verwacht dat zij een actief lid van de community worden alvorens ze hun eigen videos mogen promoten. Dit voorkomt dat gebruikers de community alleen gebruiken om volgers of abbonees te winnen.
-* *Speak English* - Omdat Reddit, de Minecraft community, en de moderators allemaal grotendeels Engels praten, is het niet toegestaan om posts te plaatsen die in een niet-Engelse taal zijn geschreven.
-
-In de toekomst zal er ook worden gekeken of het mogelijk is om de handhaving voor de volgende regels te automatiseren;
-* *No memes* - Het is niet toegestaan om [internetmemes](https://nl.wikipedia.org/wiki/Internetmeme) te posten, omdat deze vaak van lage kwaliteit zijn en in zeer korte tijd kunnen worden gemaakt. Gebruikers worden verzocht om dit soort posts te plaatsen in de [/r/MinecraftMemes community](https://www.reddit.com/r/MinecraftMemes/).
-* *No images of text* - Afbeeldingen die voornamelijk bestaan uit text en/of die zonder text hun oorspronkelijke doel verliezen, zijn niet toegestaan.
 
 Deze regels zijn gekozen omdat het meerendeel van de regelovertredende posts 1 of meer van de bovenstaande regels verbreken.
 
+In de toekomst zal er ook worden gekeken of het mogelijk is om de handhaving voor de volgende regels te automatiseren. Deze regels worden niet direct geautomatiseerd omdat dit vrij complexe taken zijn, waar meer onderzoek voor nodig is.
+* *No memes* - Het is niet toegestaan om [internetmemes](https://nl.wikipedia.org/wiki/Internetmeme) te posten, omdat deze vaak van lage kwaliteit zijn en in zeer korte tijd kunnen worden gemaakt. Gebruikers worden verzocht om dit soort posts te plaatsen in de [/r/MinecraftMemes community](https://www.reddit.com/r/MinecraftMemes/).
+* *No images of text* - Afbeeldingen die voornamelijk bestaan uit text en/of die zonder text hun oorspronkelijke doel verliezen, zijn niet toegestaan.
+* *Speak English* - Omdat Reddit, de Minecraft community, en de moderators allemaal grotendeels Engels praten, is het niet toegestaan om posts te plaatsen die in een niet-Engelse taal zijn geschreven.
+
+
+
+## Mogelijkheden  
+Er zijn verschillende diensten waar de bot mee zou kunnen communiceren, wat ons de mogelijkheid geeft om extra functionaliteit toe te voegen. Deze diensten zijn als volgt;
+
+* _Discord_ - Het chatprogramma dat het moderator team gebruikt voor interne communicatie. Wij kunnen hiermee communiceren via de Discord API.
+* _Modmail_ - Een onderdeel van Reddit waarmee gebruikers berichten kunnen sturen naar het moderator team, om bijvoorbeeld vragen te stellen of een klacht in te dienen. Wij kunnen hiermee communiceren via de Reddit API.
+
 ## Eisen
-Vanuit het moderator team zijn de volgende eisen gesteld aan dit project;
+Vanuit het moderator team en het ontwikkelingsteam zijn de volgende _must haves_ gekomen;
 
 * Elke moderator moet de mogelijkheid hebben om de configuratie van de bot aan te passen.
 * De bot heeft een soort _kill-switch_ nodig, waarmee moderators de bot uit kunnen schakelen wanneer nodig, zonder dat zij hiervoor toegang tot de server nodig hebben.
-
-Met betrekking tot het ontwerp zijn er de volgende eisen gesteld;
-
 * Het systeem moet modulair zijn opgebouwd, zodat het mogelijk is om in de toekomst makkelijk nieuwe functionaliteit toe te voegen.
+* Er is gekozen om het systeem te bouwen in C#, met zo min mogelijk code van derden.
 
-## Ontwerp
+In de toekomst zal ook worden overwogen om de volgende _could haves_ te implementeren;
+* Notificaties in Discord wanneer de bot een bepaalde acties onderneemt, zodat wij hem beter in de gaten kunnen houden en eventuele fouten vroeg kunnen oplossen.
+* Een systeem dat automatisch de meest voorkomende Modmail vragen detecteerd en beantwoord.
+* Een webinterface waarmee de bot kan worden aangestuurd en geconfigureerd.
+
+# Onderdelen
+
+Het systeem zal worden opgebouwd uit de volgende componenten;
+
+* _RedditCom_ - Dit component zal de benodigde functionaliteit bevatten om met de Reddit API te communiceren,
+* _Handlers_ - Dit component zal de filters bevatten die controleren of een post of comment 1 van de bovengenoemde regels overtreedt.
+* _Core_ - Dit component zal de _main loop_ van het systeem bevatten, en zal daarom het hoofdonderdeel zijn van het gehele systeem.
+* _DiscordCom_* - Dit component zal met Discord communiceren wanneer nodig.
+* _ConfigUtils_ - Dit component zal het configuratiebestand uitlezen en inladen. De code van dit component is [hier te vinden](https://github.com/TehNolz/ConfigUtils).
+
+## _RedditCom_
+Dit onderdeel zal de benodigde functionaliteit bevatten om met de Reddit API te communiceren. Het zal verschillende datatypes bevatten die bepaalde onderdelen van Reddit representeren. Deze datatypes zijn als volgt;  
+  
+* _Comment_ - Een reactie, geplaatst door een gebruiker. Dit datatype zal ook functies bevatten voor het aanmaken, verwijderen, en aanpassen van reacties.
+* _Link_ - Een post, geplaatst door een gebruiker. Dit datatype zal ook functies bevatten voor het aanmaken, verwijderen, en aanpassen van posts.
+* _Account_ - Een gebruikersaccount. Dit datatype zal functies bevatten voor het ophalen van de reacties en posts die de gebruiker heeft gemnaakt.
+* _Subreddit_ - Een subreddit (een community binnen Reddit). Dit datatype zal functies bevatten voor het ophalen van de meest recente posts en reacties die in deze subreddit zijn geplaatst.
+* _Message_ - Een _private message_, verzonden tussen de bot en een gebruiker.
+
+De namen van deze datatypes zijn overgenomen van de [Reddit API documentatie](https://www.reddit.com/dev/api).
+
+Om misbruik te voorkomen maakt de Reddit API gebruik van _rate limiting_. Om te voorkomen dat de bot wordt geblokkeerd, is het van groot belang dat de bot deze rate limit ten allen tijden respecteerd.
+
+_RedditCom_ zal zodanig worden opgebouwd dat het grotendeels los staat van de andere onderdelen. Dit zal ervoor zorgen dat wij eventueel in latere projecten het onderdeel kunnen hergebruiken.
+
+## Handlers
+Dit onderdeel zal verschillende filters bevatten, die elk zullen controleren of een post of comment een bepaalde regel overtreedt. Elke keer als er een post of comment wordt geplaatst, dan zullen deze filters 1 voor 1 worden uitgevoerd. De resultaten hiervan worden uiteindelijk samengevoegd en, als er een regel is overtreden, zal de post of comment worden verwijderd en krijgt de gebruiker een waarschuwing.
+
+Dit onderdeel zal zo worden opgebouwd dat extra filters zeer makkelijk toe te voegen zijn, mocht dit in de toekomst nodig zijn.  
+  
+De volgende filters zullen worden geimplementeerd;
+
+### PostSpamFilter
+Deze filter zal controleren of de gebruiker veel posts in een korte tijd heeft geplaatst. Dit zal worden gedaan door via _RedditCom_ te controleren hoeveel posts een gebruiker binnen een bepaalde periode in de subreddit heeft geplaatst.
+
+De exacte hoeveelheid posts die is toegestaan en de periode waarin deze mogen zijn geplaatst kunnen beide worden aangepast door de moderators doormiddel van het configuratiesysteem.
+
+### SelfPromotionFilter
+Deze filter zal controleren of een gebruiker toestemming heeft om zijn YouTube kanalen of andere content te promoten. Dit zal worden gedaan door via _RedditCom_ het aantal text-posts (posts bestaande uit text, in plaats van een link) en comments dat de gebruiker recent heeft geplaatst op te halen. Een gebruiker mag alleen videos en dergelijke content posten als dit aantal hoog genoeg is.
+
+Het minimum aantal text-posts en comments is instelbaar via het configuratiesysteem.
+
+## Core
+Dit onderdeel is het hoofdonderdeel van het gehele systeem. Het bevat daarom ook de _main loop_ van de bot, en zal alle andere onderdelen van het systeem aansturen.
+
+De main loop zal als volgt worden opgebouwd;
+
+1. Er wordt gechecked of de _kill-switch_ commando is uitgevoerd vanuit Discord. Zo ja, dan zan de bot direct afsluiten.
+2. Er wordt gecontroleerd of de wiki pagina waar het configuratiebestand in staat is gewijzigd. Mocht dit gebeurt zijn, dan wordt het nieuwe bestand opgehaald en ingeladen.
+3. Alle posts en comments die zijn geplaatst sinds de laatste iteratie worden opgehaald.
+4. De nieuwe posts en comments worden verspreidt over verschillende _worker threads_.
+5. Deze worker threads zullen alle posts en comments door de filters heensturen. Mocht het blijken dat een post of comment 1 of meer regel heeft overtreden, dan wordt deze direct verwijdert.
+6. De bot wacht tot alle worker threads klaar zijn.
+
+## DiscordCom
+Dit onderdeel zal ons de mogelijkheid geven om berichten naar Discord te versturen, en deze ook te ontvangen. In het begin zal dit onderdeel voornamelijk bedoeld zijn als _kill-switch_. De bot zal via een Discord command uit te schakelen zijn.  
+  
+Later zal dit onderdeel worden uitgebreidt om ook notificaties te versturen over de acties die de bot heeft ondernomen.
