--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
@@ -4,18 +4,26 @@ Tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten kwam ik
 
 ## Werkwijze
 
-Ik ben met dit leerdoel begonnen door te onderzoeken of ik een _CI/CD pipeline_ of ander deployment process kon opzetten voor deze website. Al vrij snel kwam ik [GitHub Actions](https://github.com/features/actions) tegen; een onderdeel van GitHub waarmee ontwikkelaars gemakkelijk een _CI/CD pipeline_ konden opzetten om zo hun applicaties automatisch te _builden_, testen, en uit te rollen. Op basis van dit de [GitHub Actions documentatie](https://docs.github.com/en/free-pro-team@latest/actions), en [informatie van het internet](https://swimburger.net/blog/dotnet/how-to-deploy-aspnet-blazor-webassembly-to-github-pages) een nieuwe pipeline op te zetten voor deze website. Een beschrijving van deze pipeline is hieronder te vinden als Bewijsmateriaal 1.
+Mijn bedrijfsbegeleider en een andere medewerker van Ranshuijsen hebben mij uitgelegd hoe het deployment proces van Ranshuijsen in elkaar zit. De tools en scripts die in dit proces worden gebruikt heb ik zelf hierna extra onderzocht door de documentatie hiervan door te nemen. Het gehele deploymentproces heb ik vervolgens samengevat in een kort verslag, dat hieronder te vinden is als Bewijsmateriaal 1.
 
-Ranshuijsen gebruikt echter een geheel ander process om hun applicaties uit te rollen. Zij hebben hiervoor zelf een tool ontwikkeld, genaamd _RvlBuildToolkit_.
-==TODO Uitzoeken hoe deze tool werkt==
+Tot slot ben ik bezig geweest met onderzoeken of ik een _CI/CD pipeline_ of ander deployment process kon opzetten voor deze website. Al vrij snel kwam ik [GitHub Actions](https://github.com/features/actions) tegen; een onderdeel van GitHub waarmee ontwikkelaars gemakkelijk een _CI/CD pipeline_ konden opzetten om zo hun applicaties automatisch te _builden_, testen, en uit te rollen. Op basis van dit de [GitHub Actions documentatie](https://docs.github.com/en/free-pro-team@latest/actions), en [informatie van het internet](https://swimburger.net/blog/dotnet/how-to-deploy-aspnet-blazor-webassembly-to-github-pages) is het mij gelukt om een nieuwe pipeline op te zetten voor deze website. Een beschrijving van deze pipeline is hieronder te vinden als Bewijsmateriaal 2.
 
-## Bewijsmateriaal 1 - GitHub Actions
+## Bewijsmateriaal 1 - Deploymentproces van Ranshuijsen
+
+Het deploymentproces van Ranshuijsen werkt ongeveer als volgt.
+
+1. Een medewerker voert een aantal [NAnt](http://nant.sourceforge.net/) scripts uit, waaronder 1 applicatiespecifiek script en verschillende basis scripts. Deze scripts automatiseren verschillende acties, zoals het configureren van de applicatie (waar nodig), het versienummer verhogen, controleren of alle bestanden zijn geupload naar de SVN repository, enzovoort. Uiteindelijk zal het script het systeem compileren door via [MSBuild](https://docs.microsoft.com/en-us/visualstudio/msbuild/msbuild?view=vs-2019) een Release build te maken.
+2. De resulterende build wordt ingepakt in een ZIP bestand. De naam van dit bestand bevat de datum en tijd waarop de build is gemaakt, en een unieke code waaraan te zien is welke applicatie het bestand bevat (de zogehete "prefix").
+3. Het zip bestand wordt vervolgens overgezet naar een map op de server waar de huidige versie van het systeem op draait.
+4. De nieuwe versie van het systeem wordt tot slot geinstalleerd door middel van de _RvlBuildToolkit_. Dit is een tool ontwikkeld door Ranshuijsen waarmee zij gemakkelijk de versies van hun applicatie kunnen beheren. Deze tool pakt het ZIP bestand uit, en vervangt de huidige installatie met deze nieuwe versie. 
+
+De _RvlBuildToolkit_ draait direct op de servers, en kan daarom alleen worden gebruikt door eerst via _Remote Desktop_ te verbinden met de server. Mocht er namelijk iets verkeerd gaan tijdens het installeren van een nieuwe versie, dan kan een ontwikkelaar dit direct oplossen.
+
+## Bewijsmateriaal 2 - GitHub Actions
 
 Met de kennis die ik tijdens mijn stage heb verzameld, is het mij gelukt om een _CI/CD pipeline_ voor deze website op te zetten met behulp van [GitHub Actions](https://github.com/features/actions).
 
-Elke keer als ik een deel van de text of code aanpas, dan wordt er automatisch een script uitgevoerd die mijn website update naar de laatste versie. Dit script is [hier te vinden](https://github.com/TehNolz/Portfolio/blob/master/.github/workflows/update.yml)
-
-Het script werkt als volgt;
+Elke keer als ik een deel van de text of code aanpas, dan wordt er automatisch [een update script](https://github.com/TehNolz/Portfolio/blob/master/.github/workflows/update.yml) uitgevoerd die mijn website update naar de laatste versie. Het script werkt als volgt;
 
 * De Git repository waar de broncode van de website in staat wordt gedownload,
 * .NET 5 wordt klaargemaakt voor gebruik,
@@ -29,8 +37,6 @@ Het script werkt als volgt;
 Na het uitvoeren van dit scriptbestand, is de website geheel up-to-date. Mocht in 1 van de stappen een fout optreden, dan krijg ik automatisch een bericht van GitHub die mij hierover inlicht.
 
 Door dit script te schrijven heb ik een goed beeld gekregen van hoe een _CI/CD pipeline_ ongeveer werkt. Deze kennis kan ik later ook weer hergebruiken tijdens mijn werk of voor mijn hobbyprojecten.
-
-## Bewijsmateriaal 2 - Deploymentproces van Ranshuijsen
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
