--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -4,17 +4,25 @@ In mijn vrije tijd doe ik vrijwillergerswerk als moderator van de Minecraft comm
 
 Toen ik echter begon aan dit project, kwam ik er al snel achter dat een dergelijke bot veel complexer zou zijn dan ik had verwacht. Ik moest regelmatig mijn werk stilleggen omdat ik iets over het hoofd had gezien, waar ik vervolgens weer een tijd lang over moest nadenken. Ook zat ik hierdoor vaak stukken code te herschrijven, zonder veel vooruitgang te maken. Ik verloor daarom ook al vrij snel mijn motivatie, en legde het project neer.
 
-Ik wilde daarom tijdens mijn stage leren hoe bedrijven zoals Ranshuijsen grote, complexe systemen ontwerpen en plannen, zodat ik deze methodes zelf ook kan gebruiken. Daarom heb ik besloten hier een leerdoel van te maken.
+Ik wilde daarom tijdens mijn stage leren hoe bedrijven zoals Ranshuijsen grote, complexe systemen ontwerpen en plannen, zodat ik deze methodes zelf ook kan gebruiken en alsnog aan dit project te kunnen beginnen. Daarom heb ik besloten hier een leerdoel van te maken.
 
 ## Werkwijze
-==TODO werkwijze==  
-==hoe wordt software architecture gemaakt (yourdan?)==  
-==nagevraagd bij rim==
+In het begin ging ik ervan uit dat bedrijven hun nieuwe projecten starten door een Technisch Ontwerp document op te zetten, net zoals wij dit tijdens de opleiding ook eens hebben gedaan. Dit document zou precies beschrijven hoe een systeem in elkaar zit, en wat er nodig is om het systeem te kunnen bouwen. Ik was van plan om deze documenten te bestuderen om zo een beeld te krijgen over hoe Ranshuijsen aan een nieuw project begint.  
+  
+Toen ik echter bij mijn bedrijfsbegeleider ging navragen of zij ergens dit soort documenten, bleek het dat zij eigenlijk nooit deze documenten schreven. In plaats daarvan houden zij een meeting met alle ontwikkelaars, waarin zij uitschetsen hoe het huidige systeem (indien deze bestaat) is opgebouwd, hoe het nieuwe systeem zal worden opgebouwd, en hoe zij van het oude naar het nieuwe systeem gaan migreren. Na het afronden van deze meetings weten alle ontwikkelaars hoe het nieuwe systeem zal worden gebouwd, en wat hun taken hierbij zijn.
+
+Mijn beddrijfsbegeleider demonstreerde hoe deze meetings er ongeveer uit zien door een schets te maken van de CRM migratie waar ik mee bezig was als onderdeel van mijn [stageopdracht](Content/Stage3/Stageopdracht). Deze schets is hieronder te vinden;
+
+![](Assets/Images/CRM_migratie_schets.PNG)  
+  
+De linkerkant van de schets beschrijft de huidige situate (de _Ist_). Het geeft een globaal overzicht over de onderdelen waaruit de oude versie van het CRM was opgebouwd. De rechterkant beschrijft de nieuwe situatie (de _Soll_), waarin de nieuwe situatie wordt beschreven.  
+  
+Met de informatie die ik tijdens het gesprek met mijn bedrijfsbegeleider heb gekregen, is het mij gelukt om een technisch ontwerp op te zetten over mijn eerdergenoemde idee. Dit document heb ik opgezet door een soort mentale schets van het systeem te maken. Op deze manier kon ik het systeem gemakkelijk opsplitsen in kleine, gespecialiseerde stukjes, en werd het ineens een stuk makkelijker om dit alles op papier te zetten.
 
 ## Bewijsmateriaal
 Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik beschrijf wat mijn eerder genoemde idee precies inhoudt, wat voor een functionaliteit het systeem zal bevatten, en hoe het systeem is gestructureerd. Dit document zal ik later kunnen gebruiken om alsnog dit systeem te bouwen.
 
-Dit document is [hier](Content/Stage3/Bewijsmateriaal/6) te vinden.
+Het document is [hier](Content/Stage3/Bewijsmateriaal/6) te vinden.
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
