--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
@@ -2,13 +2,12 @@
 Het testen van software is zeer belangrijk. Als een bedrijf software oplevert waar veel en/of grote fouten in zitten, dan kan dit veel tijd en geld kosten. Om deze redenen wilde ik tijdens mijn stage leren hoe een bedrijf zoals Ranshuijsen hun software test, zodat ik deze zelfde methodes ook op mijn eigen projecten kan toepassen.
 
 # Werkwijze
-==TODO werkwijze==
-==Hoe test Ranshuijsen?==
+In overleg met mijn bedrijfsbegeleider had ik besloten om een testplan op te zetten voor het CRM, waar ik als onderdeel van mijn [stageopdracht](Content/Stage3/Stageopdracht) aan werk. Hiervoor heb ik aan twee medewerkers gevraagd of zij een aantal testplannen hadden die ik als voorbeeld zou kunnen gebruiken. Op basis van de documenten die zij mij hebben gegeven en de documenten die ik ook tijdens mijn 1ste en 2de jaars projecten heb gebruijkt, heb ik een testplan opgezet over het user management gedeelte van het CRM. Dit testplan bevat enkele tests die uitgevoerd kunnen worden om te controleren of dit deel van het CRM werkt naar behoren.
+
+Helaas bleek Ranshuijsen weinig gebruik te maken van _Unit Tests_, waardoor ik deze niet heb kunnen bestuderen. Wel kwam ik tijdens het werken aan [Leerdoel 7 - Design Patterns](Content/Stage3/Leerdoelen/7) veel informatie tegen over het gebruik van Dependency Injection bij het schrijven van _Unit Tests_, waardoor ik hier alsnog iets over heb geleerd.
 
 # Bewijsmateriaal
-==TODO bewijsmateriaal==  
-==Unit tests?==  
-==Test rapportages?==  
+Voor dit leerdoel heb ik een testplan opgezet waarin het user management gedeelte van het CRM wordt getest. Omdat er echter gevoelige informatie in dit document staan, kan ik het niet op deze website plaatsen.
 
 ## Feedback bedrijfsbegeleider/collega
 ==TODO feedback==
