--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
@@ -27,4 +27,8 @@ De onderstaande screenshots laten zien dat ik tijdens mijn stage gebruik heb gem
 ==TODO feedback==
 
 ## Reflectie
-==TODO reflectie==
+==TODO reflectie feedback==  
+  
+Het was erg interresant om voor de verandering met een ander versiebeheersysteem te werken dan dat ik normaal doe. Ik weet nu beter waar ik rekening mee moet houden als ik in de toekomst ooit een versiebeheersysteem moet uitkiezen. Ook heb ik natuurlijk veel geleerd over hoe SVN werkt, en wat de verschillen zijn tussen SVN en Git. Deze kennis zou ik eventueel later kunnen gebruiken bij mijn werk, mocht ik bij een bedrijf gaan werken dat SVN gebruikt. Ik vind daarom ook dat ik dit leerdoel heb behaald.
+
+Tijdens mijn onderzoek naar SVN ben ik ook nog een ander versiebeheersysteem tegengekomen, genaamd [Mercurial](https://www.mercurial-scm.org/). Ik ben van plan om ook deze in de toekomst eens uit te proberen.
