--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
@@ -1,5 +1,5 @@
 ﻿# Leerdoel 10 - Design
-Aan het begin van mijn stage heb ik mijn bedrijfsbegeleider om hulp gevraagd bij het bedenken van leerdoelen. Het viel hem op dat ik weinig aandacht besteedde aan de opmaak en uiterlijk van de documenten die ik schreef, waardoor ze waarschijnlijk niet zouden opvallen tussen de documenten van anderen. Ik heb daarom besloten dat ik meer wilde leren over hoe ik de opmaak van mijn documenten kan verbeteren, en heb hier een leerdoel van gemaakt.
+Aan het begin van mijn stage heb ik mijn bedrijfsbegeleider om hulp gevraagd bij het bedenken van leerdoelen. Het viel hem op dat ik weinig aandacht besteedde aan de opmaak en uiterlijk van de documenten die ik schreef, waardoor ze waarschijnlijk niet zouden opvallen tussen de documenten van anderen. Ik heb daarom besloten dat ik meer wilde leren over hoe ik de uiterlijk van mijn documenten en programmas kan verbeteren, en heb hier een leerdoel van gemaakt.
 
 ## Werkwijze
 
@@ -16,4 +16,7 @@ Om dit leerdoel te behalen heb ik tijdens het opzetten van alle eerder genoemde 
 ==TODO feedback==
 
 ## Reflectie
-==TODO reflectie==
+==TODO reflectie feedback==
+
+Ook al is de tip die ik van mijn bedrijfsbegeleider heb gekregen enorm handig en zal hij mij enorm helpen, heb niet het idee dat ik tijdens mijn stage veel heb geleerd over dit onderwerp. Ik weet nu wel waarom ik meer aandacht moet besteden aan het uiterlijk van mijn documenten en programmas, maar ik weet niet zeker hoe ik dit het beste zou kunnen doen. Hier had ik graag wat meer over willen weten, waardoor ik niet vind dat ik leerdoel gehaald heb. Ik hoop dat ik later in mijn studie of tijdens mijn werk hier wat meer over kan leren.
+
