--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
@@ -23,16 +23,16 @@ De _RvlBuildToolkit_ draait direct op de servers, en kan daarom alleen worden ge
 
 Met de kennis die ik tijdens mijn stage heb verzameld, is het mij gelukt om een _CI/CD pipeline_ voor deze website op te zetten met behulp van [GitHub Actions](https://github.com/features/actions).
 
-Elke keer als ik een deel van de text of code aanpas, dan wordt er automatisch [een update script](https://github.com/TehNolz/Portfolio/blob/master/.github/workflows/update.yml) uitgevoerd die mijn website update naar de laatste versie. Het script werkt als volgt;
+Elke keer als ik een deel van de text of code van mijn portfolio aanpas, dan wordt er automatisch [een update script](https://github.com/TehNolz/Portfolio/blob/master/.github/workflows/update.yml) uitgevoerd die mijn website update naar de laatste versie. Het script werkt als volgt;
 
-* De Git repository waar de broncode van de website in staat wordt gedownload,
-* .NET 5 wordt klaargemaakt voor gebruik,
-* Alle _unit tests_ (zie [Leerdoel 5 - Testen](Content/Stage3/Leerdoelen/5)) worden uitgevoerd. Mocht er een test mislukken, dan zal de update direct worden gestopt.
-* De website wordt genereerd. Alle bestanden worden door .NET 5 klaargemaakt zodat een browser ze zou kunnen laden.
-* De _base tag_ wordt aangepast, zodat alle pagina links binnen in de website correct zullen functioneren.
-* Een fix wordt toegepast zodat 404-foutpaginas worden doorgestuurd naar de hoofdpagina van mijn website, zodat Blazor deze fouten zelf kan afhandelen in plaats van dat GitHub dit doet.
-* Een fix wordt toegepast die een conflict met Jekyll oplost. Jekyll is een systeem dat Markdown en andere bestanden kan omzetten naar statische websites, en zit ingebouwd in [GitHub Pages](https://pages.github.com/). Dit zorgt er echter voor dat Blazor niet meer werk. In deze stap wordt Jekyll uitgeschakeld, waardoor Blazor weer naar behoren werkt.
-* De website wordt gepubliceerd naar GitHub pages. Dit wordt gedaan doormiddel van [github-pages-deploy-action](https://github.com/JamesIves/github-pages-deploy-action).
+1. De Git repository waar de broncode van de website in staat wordt gedownload,
+2. .NET 5 wordt klaargemaakt voor gebruik,
+3. Alle _unit tests_ (zie [Leerdoel 5 - Testen](Content/Stage3/Leerdoelen/5)) worden uitgevoerd. Mocht er een test mislukken, dan zal de update direct worden gestopt.
+4. De website wordt genereerd. Alle bestanden worden door .NET 5 klaargemaakt zodat een browser ze zou kunnen laden.
+5. De _base tag_ wordt aangepast, zodat alle pagina links binnen in de website correct zullen functioneren.
+6. Een fix wordt toegepast zodat 404-foutpaginas worden doorgestuurd naar de hoofdpagina van mijn website, zodat Blazor deze fouten zelf kan afhandelen in plaats van dat GitHub dit doet.
+7. Een fix wordt toegepast die een conflict met Jekyll oplost. Jekyll is een systeem dat Markdown en andere bestanden kan omzetten naar statische websites, en zit ingebouwd in [GitHub Pages](https://pages.github.com/). Dit zorgt er echter voor dat Blazor niet meer werk. In deze stap wordt Jekyll uitgeschakeld, waardoor Blazor weer naar behoren werkt.
+8. De website wordt gepubliceerd naar GitHub pages. Dit wordt gedaan doormiddel van [github-pages-deploy-action](https://github.com/JamesIves/github-pages-deploy-action).
 
 Na het uitvoeren van dit scriptbestand, is de website geheel up-to-date. Mocht in 1 van de stappen een fout optreden, dan krijg ik automatisch een bericht van GitHub die mij hierover inlicht.
 
@@ -42,4 +42,8 @@ Door dit script te schrijven heb ik een goed beeld gekregen van hoe een _CI/CD p
 ==TODO feedback==
 
 ## Reflectie
-==TODO reflectie==
+==TODO reflectie feedback==  
+  
+Dankzij het onderzoek dat ik heb gedaan als onderdeel van dit leerdoel, heb ik meer geleerd over hoe (updates voor) systemen kunnen worden uitgerold en klaargemaakt voor gebruik. Ik ben er zeker van dat deze kennis later tijdens mijn werk erg handig zal zijn, omdat elk softwarebedrijf hier wel mee te maken krijgt. Ook zal de kennis handig zijn voor mijn eigen projecten. Ik ben zelfs al bezig geweest om een _GitHub Actions_ script op te zetten voor een hobbyproject waar ik op het moment mee bezig ben, zodat ik nieuwe versies hiervan automatisch kan testen en uitrollen naar een server. Om deze redenen vind ik dan ook dat ik dit leerdoel heb behaald.
+
+Ik ben echter nog niet klaar met het leren over dit onderwerp. Tot nu toe heb ik alleen maar onderzocht hoe ik een systeem kan uitrollen naar 1 server. Grotere systemen zijn echter vaak verspreid over meerdere servers, wat het uitrollen van updates weer wat ingewikkelder maakt. Ik hoop dat ik tijdens mijn afstudeerstage de mogelijkheid krijg om een dergelijk systeem te onderzoeken.
