--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
@@ -13,4 +13,9 @@ Voor dit leerdoel heb ik een testplan opgezet waarin het user management gedeelt
 ==TODO feedback==
 
 ## Reflectie
-==TODO reflectie==
+==TODO reflectie feedback==
+
+Uiteindelijk heb ik helaas niet zo veel over dit onderwerp geleerd als ik had gehoopt. Tijdens mijn opleiding heb ik al enkele testplannen moeten schrijven, en de testplannen van Ranshuijsen verschillen hier weinig mee. Ook heb ik weinig geleerd over het schrijven van _Unit Tests_, omdat Ranshuijsen hier zelf weinig gebruik van maakt. Ik had gehoopt dat zij een aantal technieken gebruikte waar ik nog nooit van had gehoord, maar uiteindelijk bleek dit niet het geval te zijn.
+
+Persoonlijk vind ik daarom dat ik dit leerdoel niet gehaald heb. Ik hoop dat ik later in mijn studie of tijdens mijn werk hier wel meer over kan leren.
+
